--- a/package.json
+++ b/package.json
@@ -32,5 +32,8 @@
   "private": true,
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "dependencies": {
+    "http-server": "^0.10.0"
   }
 }
